--- a/app/src/main/res/layout/activity_new1.xml
+++ b/app/src/main/res/layout/activity_new1.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.synctool.theakki.synctool.Wizzard_New1">
+    tools:context="theakki.synctool.Wizzard_New1">
 
     <LinearLayout
         android:layout_width="match_parent"
