--- a/app/src/main/res/layout/activity_all_jobs.xml
+++ b/app/src/main/res/layout/activity_all_jobs.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.synctool.theakki.synctool.AllJobs">
+    tools:context="theakki.synctool.AllJobs">
 
     <LinearLayout
         android:layout_width="match_parent"
