--- a/app/src/main/res/layout/treeview_folder.xml
+++ b/app/src/main/res/layout/treeview_folder.xml
@@ -13,14 +13,12 @@
         <TextView
             android:id="@+id/txt_Foldername"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+            android:layout_height="wrap_content"/>
 
         <TextView
             android:id="@+id/txt_Path"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:visibility="gone" />
     </LinearLayout>
 
