--- a/app/src/main/res/layout/activity_new2.xml
+++ b/app/src/main/res/layout/activity_new2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="theakki.synctool.Wizzard_New2"
+    tools:context="theakki.synctool.Wizzard_New2_SourceTarget"
     tools:layout_editor_absoluteY="81dp">
 
     <LinearLayout
