Add "Settings" and after "Boot End" Behavior

--- a/app/src/main/res/layout/activity_main1.xml
+++ b/app/src/main/res/layout/activity_main1.xml
@@ -56,6 +56,13 @@
             tools:text="@string/MainMenu_NewJob" />
 
         <Button
+            android:id="@+id/btn_Settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/MainMenu_Settings"
+            tools:text="@string/MainMenu_Settings" />
+
+        <Button
             android:id="@+id/btn_Exit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
